--- a/Lesson1.ipynb
+++ b/Lesson1.ipynb
@@ -9,26 +9,13 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "466336\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# https://projecteuler.net/problem=1sum = 0\n",
+    "# https://projecteuler.net/problem=1\n",
+    "sum = 0\n",
     "for i in range(1, 1000):\n",
     "    if i % 3 == 0 or i % 5 == 0:\n",
     "        sum += i\n",
@@ -41,7 +28,7 @@
    "metadata": {},
    "source": [
     "Fork: Копирование репозитория в личный аккаунт \n",
-    "Если вносим в fork  изменения можем делать pull request\n",
+    "Если вносим в fork изменения можем делать pull request\n",
     "pull request: предложение изменения кода в форкнутом репозитории, запрос на интеграцию\n",
     "commit: сохранение внесенных изменений\n",
     "fetch origin == git pull: принять изменения, обновления\n",
@@ -50,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://codeforces.com/problemset/problem/4/A"
+    "https://codeforces.com/problemset/problem/4/A"
    ]
   },
   {
@@ -63,9 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "codeforce: алгоритмы структуры данных\n",
-    "project euler: базовая проработка математики\n",
-    "leetcode: задачи по алгоритмама с собеседования"
+    "#codeforces: алгоритмы структуры данных\n",
+    "#project euler: базовая проработка математики\n",
+    "#leetcode: задачи по алгоритмам с собеседования"
    ]
   },
   {
