--- a/Lesson1.ipynb
+++ b/Lesson1.ipynb
@@ -27,12 +27,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fork: Копирование репозитория в личный аккаунт \n",
+    "Fork: Копирование репозитория в личный аккаунт\n",
     "Если вносим в fork изменения можем делать pull request\n",
     "pull request: предложение изменения кода в форкнутом репозитории, запрос на интеграцию\n",
     "commit: сохранение внесенных изменений\n",
     "fetch origin == git pull: принять изменения, обновления\n",
-    "Утро начинается с команды git pull, день заканчивается с команды git push\n"
+    "Утро начинается с команды git pull, день заканчивается с команды git push"
    ]
   },
   {
