--- a/Lesson1.ipynb
+++ b/Lesson1.ipynb
@@ -23,16 +23,17 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Fork: Копирование репозитория в личный аккаунт\n",
-    "Если вносим в fork изменения можем делать pull request\n",
-    "pull request: предложение изменения кода в форкнутом репозитории, запрос на интеграцию\n",
-    "commit: сохранение внесенных изменений\n",
-    "fetch origin == git pull: принять изменения, обновления\n",
-    "Утро начинается с команды git pull, день заканчивается с команды git push"
+    "# Fork: Копирование репозитория в личный аккаунт\n",
+    "# Если вносим в fork изменения можем делать pull request\n",
+    "# pull request: предложение изменения кода в форкнутом репозитории, запрос на интеграцию\n",
+    "# commit: сохранение внесенных изменений\n",
+    "# fetch origin == git pull: принять изменения, обновления\n",
+    "# Утро начинается с команды git pull, день заканчивается с команды git push"
    ]
   },
   {
@@ -41,7 +42,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://codeforces.com/problemset/problem/4/A"
+    "#https://codeforces.com/problemset/problem/4/A\n",
+    "w = int(input())\n",
+    "if w % 2 == 0 and w > 2:\n",
+    "    print(\"YES\")\n",
+    "else:\n",
+    "    print(\"NO\")"
    ]
   },
   {
@@ -53,19 +59,6 @@
     "#codeforces: алгоритмы структуры данных\n",
     "#project euler: базовая проработка математики\n",
     "#leetcode: задачи по алгоритмам с собеседования"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = int(input())\n",
-    "if w % 2 == 0 and w > 2:\n",
-    "    print(\"YES\")\n",
-    "else:\n",
-    "    print(\"NO\")"
    ]
   }
  ],
