--- a/python/hw1.ipynb
+++ b/python/hw1.ipynb
@@ -99,7 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Написать программу, которая считывает содержимое текстового файла и выводит его на экран."
+    "# Написать программу, которая считывает содержимое текстового файла и выводит его на экран.\n",
+    "file = open(\"abc.txt\")\n",
+    "text = file.read()\n",
+    "print(text)\n"
    ]
   }
  ],
