--- a/python/hw1.ipynb
+++ b/python/hw1.ipynb
@@ -102,7 +102,8 @@
     "# Написать программу, которая считывает содержимое текстового файла и выводит его на экран.\n",
     "file = open(\"abc.txt\")\n",
     "text = file.read()\n",
-    "print(text)\n"
+    "print(text)\n",
+    "f.close() # забыл закрыть поток, это важно"
    ]
   }
  ],
