--- a/python/lesson_4.ipynb
+++ b/python/lesson_4.ipynb
@@ -34,17 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48, 51, 54, 57, 60, 63, 66, 69, 72, 75, 78, 81, 84, 87, 90, 93, 96, 99]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spisok = []\n",
     "for num in range(1, 101):\n",
@@ -55,17 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_item = spisok[0]\n",
     "for item in spisok:\n",
@@ -76,112 +60,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(max_item))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__abs__',\n",
-       " '__add__',\n",
-       " '__and__',\n",
-       " '__bool__',\n",
-       " '__ceil__',\n",
-       " '__class__',\n",
-       " '__delattr__',\n",
-       " '__dir__',\n",
-       " '__divmod__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__float__',\n",
-       " '__floor__',\n",
-       " '__floordiv__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getnewargs__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__index__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__int__',\n",
-       " '__invert__',\n",
-       " '__le__',\n",
-       " '__lshift__',\n",
-       " '__lt__',\n",
-       " '__mod__',\n",
-       " '__mul__',\n",
-       " '__ne__',\n",
-       " '__neg__',\n",
-       " '__new__',\n",
-       " '__or__',\n",
-       " '__pos__',\n",
-       " '__pow__',\n",
-       " '__radd__',\n",
-       " '__rand__',\n",
-       " '__rdivmod__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__rfloordiv__',\n",
-       " '__rlshift__',\n",
-       " '__rmod__',\n",
-       " '__rmul__',\n",
-       " '__ror__',\n",
-       " '__round__',\n",
-       " '__rpow__',\n",
-       " '__rrshift__',\n",
-       " '__rshift__',\n",
-       " '__rsub__',\n",
-       " '__rtruediv__',\n",
-       " '__rxor__',\n",
-       " '__setattr__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__sub__',\n",
-       " '__subclasshook__',\n",
-       " '__truediv__',\n",
-       " '__trunc__',\n",
-       " '__xor__',\n",
-       " 'as_integer_ratio',\n",
-       " 'bit_count',\n",
-       " 'bit_length',\n",
-       " 'conjugate',\n",
-       " 'denominator',\n",
-       " 'from_bytes',\n",
-       " 'imag',\n",
-       " 'numerator',\n",
-       " 'real',\n",
-       " 'to_bytes']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir(int)\n",
     "### __add__ всегда вызывается неявно при сложении\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"sergey\"\n",
+    "dir(str)\n",
+    "name.__len__.__call__()\n",
+    "### __call__ дандер метод вызыывается всегда неявно когда используем () - вызываешь функцию или метод\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir()\n",
+    "### файл.py - это модуль а папка с модулями это пакет\n",
+    "### Системная область видимости (built-in) - область системных имен например пустая функция dir возвращает атрибуты из модуля / системная область\n",
+    "### Область модуля - global "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name.__dict__\n",
+    "### если функция dir показывает атрибуты обьекта то дандер метод __dict__ является подмножеством __dir__ и он показывает свойства экземпляра класса если такие существуют"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### для того чтобы интерпретатор понял что директория является пакетом нужно создать файл __init__.py"
    ]
   },
   {
